@startuml
abstract class com.zhouruxuan.behavioral.state.demo3.State {
+ Mammoth mammoth
+ {abstract}void onEnterState()
+ {abstract}void observe()
}
class com.zhouruxuan.behavioral.state.demo3.PeacefulState {
+ void observe()
+ void onEnterState()
}
class com.zhouruxuan.behavioral.state.demo3.AngryState {
+ void observe()
+ void onEnterState()
}
class com.zhouruxuan.behavioral.state.demo3.Mammoth {
- State state
+ void timePasses()
- void changeStateTo(State)
+ String toString()
+ void observe()
}
class com.zhouruxuan.behavioral.state.demo3.App {
+ {static} void main(String[])
}


com.zhouruxuan.behavioral.state.demo3.State <|-- com.zhouruxuan.behavioral.state.demo3.PeacefulState
com.zhouruxuan.behavioral.state.demo3.State <|-- com.zhouruxuan.behavioral.state.demo3.AngryState
com.zhouruxuan.behavioral.state.demo3.Mammoth -- com.zhouruxuan.behavioral.state.demo3.State : 依赖
@enduml